// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FlavorCard
    flavor={
        Object {
            "dietaryRestrictions": Object {},
            "filters": Object {},
            "id": "",
            "image": "",
            "label": "",
            "title": "",
          }
    }
    flavors={
        Object {
            "dietaryRestrictions": Object {},
            "filters": Object {},
            "id": "",
            "image": "",
            "label": "",
            "title": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="bg-white m2 p3 flex flex-column justify-between items-center relative"
>
        <div
                className="col-12"
                style={
                        Object {
                                "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                "backgroundSize": "contain",
                              }
                }
        />
        <p
                className="center bold text-madison-blue"
        />
</div>,
      "className": "",
      "color": "white-denim",
      "disabled": false,
      "fullWidth": false,
      "hover": "shadow",
      "label": "",
      "onClick": [Function],
      "shadow": false,
      "to": "/flavors/",
      "type": "button",
      "variant": "style-none",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="col-12"
            style={
                        Object {
                                    "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                    "backgroundSize": "contain",
                                  }
            }
/>,
          <p
            className="center bold text-madison-blue"
/>,
        ],
        "className": "bg-white m2 p3 flex flex-column justify-between items-center relative",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "col-12",
            "style": Object {
              "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
              "backgroundSize": "contain",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "center bold text-madison-blue",
          },
          "ref": null,
          "rendered": "",
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="bg-white m2 p3 flex flex-column justify-between items-center relative"
>
          <div
                    className="col-12"
                    style={
                              Object {
                                        "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "contain",
                                      }
                    }
          />
          <p
                    className="center bold text-madison-blue"
          />
</div>,
        "className": "",
        "color": "white-denim",
        "disabled": false,
        "fullWidth": false,
        "hover": "shadow",
        "label": "",
        "onClick": [Function],
        "shadow": false,
        "to": "/flavors/",
        "type": "button",
        "variant": "style-none",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <div
              className="col-12"
              style={
                            Object {
                                          "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                          "backgroundSize": "contain",
                                        }
              }
/>,
            <p
              className="center bold text-madison-blue"
/>,
          ],
          "className": "bg-white m2 p3 flex flex-column justify-between items-center relative",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "col-12",
              "style": Object {
                "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                "backgroundSize": "contain",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "center bold text-madison-blue",
            },
            "ref": null,
            "rendered": "",
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FlavorCard
    flavor={
        Object {
            "dietaryRestrictions": Object {},
            "filters": Object {},
            "id": "",
            "image": "",
            "label": "",
            "title": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="bg-white m2 p3 flex flex-column justify-between items-center relative"
>
        <div
                className="col-12"
                style={
                        Object {
                                "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                "backgroundSize": "contain",
                              }
                }
        />
        <p
                className="center bold text-madison-blue"
        />
</div>,
      "className": "",
      "color": "white-denim",
      "disabled": false,
      "fullWidth": false,
      "hover": "shadow",
      "label": "",
      "onClick": [Function],
      "shadow": false,
      "to": "/flavors/",
      "type": "button",
      "variant": "style-none",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="col-12"
            style={
                        Object {
                                    "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                    "backgroundSize": "contain",
                                  }
            }
/>,
          <p
            className="center bold text-madison-blue"
/>,
        ],
        "className": "bg-white m2 p3 flex flex-column justify-between items-center relative",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "col-12",
            "style": Object {
              "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
              "backgroundSize": "contain",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "center bold text-madison-blue",
          },
          "ref": null,
          "rendered": "",
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="bg-white m2 p3 flex flex-column justify-between items-center relative"
>
          <div
                    className="col-12"
                    style={
                              Object {
                                        "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "contain",
                                      }
                    }
          />
          <p
                    className="center bold text-madison-blue"
          />
</div>,
        "className": "",
        "color": "white-denim",
        "disabled": false,
        "fullWidth": false,
        "hover": "shadow",
        "label": "",
        "onClick": [Function],
        "shadow": false,
        "to": "/flavors/",
        "type": "button",
        "variant": "style-none",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <div
              className="col-12"
              style={
                            Object {
                                          "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                                          "backgroundSize": "contain",
                                        }
              }
/>,
            <p
              className="center bold text-madison-blue"
/>,
          ],
          "className": "bg-white m2 p3 flex flex-column justify-between items-center relative",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "col-12",
              "style": Object {
                "background": "url(?w=200&fm=jpg&fl=progressive&q=90) no-repeat center",
                "backgroundSize": "contain",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "center bold text-madison-blue",
            },
            "ref": null,
            "rendered": "",
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
